--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width" / >
         <title>SnowTap</title>
-<link href="css/reset.css" rel="stylesheet" type="text/css" />
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
-<link href="css/typefaces.css" rel="stylesheet" type="text/css" />
-<link href="css/responsiveStyles.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js" ></script>
+
+<link href="dist/css/vendor.min.css" rel="stylesheet" type="text/css" />
+<link href="dist/css/styles_snow.css" rel="stylesheet" type="text/css" />
+<!-- <link href="dist/css/styles_snow.min.css" rel="stylesheet" type="text/css" /> -->
+<link href="dist/css/hotfix.css" rel="stylesheet" type="text/css" />
 
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">     
@@ -316,12 +315,11 @@
 
         </section> <!--END MAIN SCROLL AREA-->
 
-<script type="text/javascript" src="js/TweenMax.min.js"></script>
-<script type="text/javascript" src="js/jquery.gsap.min.js"></script>
-<script type="text/javascript" src="js/EasePack.min.js"></script>        
-<script type="text/javascript" src="js/jquery.scrollmagic.min.js"></script>
-<script type="text/javascript" src="js/jquery.scrollmagic.debug.js"></script>   
-<script type="text/javascript" src="js/custom_behaviors.js"></script>
-<script type="text/javascript" src="js/custom_behaviorsTweens.js"></script>
+    <script type="text/javascript" src="dist/js/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="dist/js/vendor.min.js"></script>
+    <script type="text/javascript" src="dist/js/custom.js"></script>
+    <!-- <script type="text/javascript" src="/dist/js/custom.min.js"></script> -->
+    <script type="text/javascript" src="dist/js/hotfix.js"></script>
+
     </body>
 </html>
