Convert CSS  =>  SASS. Use variables and mixins

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <div id="loadColor"></div>
                 <div class="logo" id="logoDrop"><img src="images/logoDrop.png" width="100%" height="100%" alt="Snowtap Logo"/></div>
                 <div class="logo" id="logoText"><img src="images/logoTextWhite.png" width="100%" height="100%" alt="Snowtap Text"/></div>
-                <div id="fmaCloudOne"><img src="images/cloud1b.png" width="100%" height="100%" alt="could 1"/></div>
-                <div id="fmaCloudTwo"><img src="images/cloud2b.png" width="100%" height="100%" alt="could 2"/></div>
-                <div id="fmaCloudThree"><img src="images/cloud3b.png" width="100%" height="100%" alt="could 3"/></div>
-                <div id="fmaCloudFour"><img src="images/cloud4b.png" width="100%" height="100%" alt="could 4"/></div>
+                <div id="fmaCloudOne" class="cloud cloud--fma"><img src="images/cloud1b.png" width="100%" height="100%" alt="could 1"/></div>
+                <div id="fmaCloudTwo" class="cloud cloud--fma"><img src="images/cloud2b.png" width="100%" height="100%" alt="could 2"/></div>
+                <div id="fmaCloudThree" class="cloud cloud--fma"><img src="images/cloud3b.png" width="100%" height="100%" alt="could 3"/></div>
+                <div id="fmaCloudFour" class="cloud cloud--fma"><img src="images/cloud4b.png" width="100%" height="100%" alt="could 4"/></div>
                 <a id="scrollDownArrow" href="#aboutSection"><img src="images/scrollDownArrow.png" width="100%" height="100%" alt="Scroll Arrow"/></a>
 
     		</section>
@@ -66,16 +66,16 @@
 <!-- /// ABOUT //////////////////////////////////////////// -->
             <section id="aboutSection">
 
-                <div id="aboutCloudOne" class="avoidPointer"><img src="images/cloud5b.png" width="100%" height="100%" alt="about could 1"/></div>
-                <div id="aboutCloudTwo" class="avoidPointer"><img src="images/cloud3b.png" width="100%" height="100%" alt="about could 2"/></div>
-                <div id="aboutCloudThree" class="avoidPointer"><img src="images/cloud6b.png" width="100%" height="100%" alt="about could 3"/></div>          
-                <div id="aboutCloudFour" class="avoidPointer"><img src="images/cloud7b.png" width="100%" height="100%" alt="about could 4"/></div>
-                <div id="aboutCloudFive" class="avoidPointer"><img src="images/cloud8b.png" width="100%" height="100%" alt="about could 5"/></div>
-                <div id="aboutCloudSix" class="avoidPointer"><img src="images/cloud2b.png" width="100%" height="100%" alt="about could 6"/></div>
+                <div id="aboutCloudOne" class="cloud cloud--about"><img src="images/cloud5b.png" width="100%" height="100%" alt="about could 1"/></div>
+                <div id="aboutCloudTwo" class="cloud cloud--about"><img src="images/cloud3b.png" width="100%" height="100%" alt="about could 2"/></div>
+                <div id="aboutCloudThree" class="cloud cloud--about"><img src="images/cloud6b.png" width="100%" height="100%" alt="about could 3"/></div>          
+                <div id="aboutCloudFour" class="cloud cloud--about"><img src="images/cloud7b.png" width="100%" height="100%" alt="about could 4"/></div>
+                <div id="aboutCloudFive" class="cloud cloud--about"><img src="images/cloud8b.png" width="100%" height="100%" alt="about could 5"/></div>
+                <div id="aboutCloudSix" class="cloud cloud--about"><img src="images/cloud2b.png" width="100%" height="100%" alt="about could 6"/></div>
 
-                <div id="aboutFlakeOne" class="snowflakeOne"><h3>ABOUT</h3><img src="images/snowflake1.png" width="100%" height="100%" alt="about snowflake 1"/></div>
-                <div id="aboutFlakeTwo" class="snowflakeTwo"><h4>CRISIS</h4><img src="images/snowflake2.png" width="100%" height="100%" alt="about snowflake 2"/></div>
-                <div id="aboutFlakeThree" class="snowflakeThree"><h5>PRODUCTS</h5><img src="images/snowflake3.png" width="100%" height="100%" alt="about snowflake 3"/></div>
+                <div id="aboutFlakeOne" class="snowflake snowflake--about snowflakeOne"><h3>ABOUT</h3><img src="images/snowflake1.png" width="100%" height="100%" alt="about snowflake 1"/></div>
+                <div id="aboutFlakeTwo" class="snowflake snowflake--about snowflakeTwo"><h4>CRISIS</h4><img src="images/snowflake2.png" width="100%" height="100%" alt="about snowflake 2"/></div>
+                <div id="aboutFlakeThree" class="snowflake snowflake--about snowflakeThree"><h5>PRODUCTS</h5><img src="images/snowflake3.png" width="100%" height="100%" alt="about snowflake 3"/></div>
 
 
 
@@ -107,16 +107,16 @@
 <!-- /// CRISIS /////////////////////////////////////////// -->
             <section id="crisisSection">
 
-                <div id="crisisCloudOne" class="avoidPointer"><img src="images/cloud9b.png" width="100%" height="100%" alt="crisis could 1"/></div>
-                <div id="crisisCloudTwo" class="avoidPointer"><img src="images/cloud10b.png" width="100%" height="100%" alt="crisis could 2"/></div>
-                <div id="crisisCloudThree" class="avoidPointer"><img src="images/cloud12b.png" width="100%" height="100%" alt="crisis could 3"/></div>
-                <div id="crisisCloudFour" class="avoidPointer"><img src="images/cloud11b.png" width="100%" height="100%" alt="crisis could 4"/></div>
-                <div id="crisisCloudFive" class="avoidPointer"><img src="images/cloud13b.png" width="100%" height="100%" alt="crisis could 5"/></div>
-                <div id="crisisCloudSix" class="avoidPointer"><img src="images/cloud14b.png" width="100%" height="100%" alt="crisis could 6"/></div>
+                <div id="crisisCloudOne" class="cloud cloud--crisis"><img src="images/cloud9b.png" width="100%" height="100%" alt="crisis could 1"/></div>
+                <div id="crisisCloudTwo" class="cloud cloud--crisis"><img src="images/cloud10b.png" width="100%" height="100%" alt="crisis could 2"/></div>
+                <div id="crisisCloudThree" class="cloud cloud--crisis"><img src="images/cloud12b.png" width="100%" height="100%" alt="crisis could 3"/></div>
+                <div id="crisisCloudFour" class="cloud cloud--crisis"><img src="images/cloud11b.png" width="100%" height="100%" alt="crisis could 4"/></div>
+                <div id="crisisCloudFive" class="cloud cloud--crisis"><img src="images/cloud13b.png" width="100%" height="100%" alt="crisis could 5"/></div>
+                <div id="crisisCloudSix" class="cloud cloud--crisis"><img src="images/cloud14b.png" width="100%" height="100%" alt="crisis could 6"/></div>
 
-                <div id="crisisFlakeOne" class="snowflakeOne"><h3>CRISIS</h3><img src="images/snowflake2.png" width="100%" height="100%" alt="crisis snowflake 1"/></div>
-                <div id="crisisFlakeTwo" class="snowflakeTwo"><h4>PRODUCTS</h4><img src="images/snowflake3.png" width="100%" height="100%" alt="crisis snowflake 2"/></div>
-                <div id="crisisFlakeThree" class="snowflakeThree"><h5>CAUSE</h5><img src="images/snowflake5.png" width="100%" height="100%" alt="crisis snowflake 3"/></div>
+                <div id="crisisFlakeOne" class="snowflake snowflake--crisis snowflakeOne"><h3>CRISIS</h3><img src="images/snowflake2.png" width="100%" height="100%" alt="crisis snowflake 1"/></div>
+                <div id="crisisFlakeTwo" class="snowflake snowflake--crisis snowflakeTwo"><h4>PRODUCTS</h4><img src="images/snowflake3.png" width="100%" height="100%" alt="crisis snowflake 2"/></div>
+                <div id="crisisFlakeThree" class="snowflake snowflake--crisis snowflakeThree"><h5>CAUSE</h5><img src="images/snowflake5.png" width="100%" height="100%" alt="crisis snowflake 3"/></div>
 
 
                 <div class="hiddenContent avoidPointer" id="crisisContent">
@@ -153,16 +153,16 @@
 <!-- /// PRODUCT ////////////////////////////////////////// -->
             <section id="productSection">
 
-                <div id="productCloudOne" class="avoidPointer"><img src="images/cloud2b.png" width="100%" height="100%" alt="product could 1"/></div>
-                <div id="productCloudTwo" class="avoidPointer"><img src="images/cloud6b.png" width="100%" height="100%" alt="product could 2"/></div>
-                <div id="productCloudThree" class="avoidPointer"><img src="images/cloud3b.png" width="100%" height="100%" alt="product could 3"/></div>          
-                <div id="productCloudFour" class="avoidPointer"><img src="images/cloud7b.png" width="100%" height="100%" alt="product could 4"/></div>
-                <div id="productCloudFive" class="avoidPointer"><img src="images/cloud5b.png" width="100%" height="100%" alt="product could 5"/></div>
-                <div id="productCloudSix" class="avoidPointer"><img src="images/cloud4b.png" width="100%" height="100%" alt="product could 6"/></div>
+                <div id="productCloudOne" class="cloud cloud--product"><img src="images/cloud2b.png" width="100%" height="100%" alt="product could 1"/></div>
+                <div id="productCloudTwo" class="cloud cloud--product"><img src="images/cloud6b.png" width="100%" height="100%" alt="product could 2"/></div>
+                <div id="productCloudThree" class="cloud cloud--product"><img src="images/cloud3b.png" width="100%" height="100%" alt="product could 3"/></div>          
+                <div id="productCloudFour" class="cloud cloud--product"><img src="images/cloud7b.png" width="100%" height="100%" alt="product could 4"/></div>
+                <div id="productCloudFive" class="cloud cloud--product"><img src="images/cloud5b.png" width="100%" height="100%" alt="product could 5"/></div>
+                <div id="productCloudSix" class="cloud cloud--product"><img src="images/cloud4b.png" width="100%" height="100%" alt="product could 6"/></div>
 
-                <div id="productFlakeOne" class="snowflakeOne"><h3>PRODUCT</h3><img src="images/snowflake3.png" width="100%" height="100%" alt="product snowflake 1"/></div>
-                <div id="productFlakeTwo" class="snowflakeTwo"><h4>CAUSE</h4><img src="images/snowflake5.png" width="100%" height="100%" alt="product snowflake 2"/></div>
-                <div id="productFlakeThree" class="snowflakeThree"><h5>CONTACT</h5><img src="images/snowflake4.png" width="100%" height="100%" alt="product snowflake 3"/></div>
+                <div id="productFlakeOne" class="snowflake snowflake--product snowflakeOne"><h3>PRODUCT</h3><img src="images/snowflake3.png" width="100%" height="100%" alt="product snowflake 1"/></div>
+                <div id="productFlakeTwo" class="snowflake snowflake--product snowflakeTwo"><h4>CAUSE</h4><img src="images/snowflake5.png" width="100%" height="100%" alt="product snowflake 2"/></div>
+                <div id="productFlakeThree" class="snowflake snowflake--product snowflakeThree"><h5>CONTACT</h5><img src="images/snowflake4.png" width="100%" height="100%" alt="product snowflake 3"/></div>
 
 
                 <div class="hiddenContent avoidPointer" id="productContent">
@@ -227,9 +227,9 @@
 
         <!-- ///// MOUNTAIN SECTION ///// -->
             <div id="mountainRange">   
-                <div id="mountainPeak" class="avoidPointer"><img src="images/mountains1.png" width="100%" height="100%" alt="Mountain Peak"/></div>
-                <div id="mountainLeft" class="avoidPointer"><img src="images/mountainLeft.png" width="100%" height="100%" alt="Mountain Left"/></div>
-                <div id="mountainRight" class="avoidPointer"><img src="images/mountainRight.png" width="100%" height="100%" alt="Mountain Right"/></div>
+                <div id="mountainPeak" class="mountain"><img src="images/mountains1.png" width="100%" height="100%" alt="Mountain Peak"/></div>
+                <div id="mountainLeft" class="mountain"><img src="images/mountainLeft.png" width="100%" height="100%" alt="Mountain Left"/></div>
+                <div id="mountainRight" class="mountain"><img src="images/mountainRight.png" width="100%" height="100%" alt="Mountain Right"/></div>
             </div>
 
             </section>
@@ -238,16 +238,16 @@
 <!-- /// CAUSE //////////////////////////////////////// -->
             <section id="causeSection">
 
-                <div id="causeCloudOne" class="avoidPointer"><img src="images/cloud12b.png" width="100%" height="100%" alt="could 11"/></div>
-                <div id="causeCloudTwo" class="avoidPointer"><img src="images/cloud15b.png" width="100%" height="100%" alt="could 12"/></div>
-                <div id="causeCloudThree" class="avoidPointer"><img src="images/cloud10b.png" width="100%" height="100%" alt="could 13"/></div>
-                <div id="causeCloudFour" class="avoidPointer"><img src="images/cloud9b.png" width="100%" height="100%" alt="could 14"/></div>
-                <div id="causeCloudFive" class="avoidPointer"><img src="images/cloud14b.png" width="100%" height="100%" alt="could 15"/></div>
-                <div id="causeCloudSix" class="avoidPointer"><img src="images/cloud11b.png" width="100%" height="100%" alt="could 16"/></div>
+                <div id="causeCloudOne" class="cloud cloud--cause"><img src="images/cloud12b.png" width="100%" height="100%" alt="could 11"/></div>
+                <div id="causeCloudTwo" class="cloud cloud--cause"><img src="images/cloud15b.png" width="100%" height="100%" alt="could 12"/></div>
+                <div id="causeCloudThree" class="cloud cloud--cause"><img src="images/cloud10b.png" width="100%" height="100%" alt="could 13"/></div>
+                <div id="causeCloudFour" class="cloud cloud--cause"><img src="images/cloud9b.png" width="100%" height="100%" alt="could 14"/></div>
+                <div id="causeCloudFive" class="cloud cloud--cause"><img src="images/cloud14b.png" width="100%" height="100%" alt="could 15"/></div>
+                <div id="causeCloudSix" class="cloud cloud--cause"><img src="images/cloud11b.png" width="100%" height="100%" alt="could 16"/></div>
 
-                <div id="causeFlakeOne" class="snowflakeOne"><h3>CAUSE</h3><img src="images/snowflake5.png" width="100%" height="100%" alt="cause snowflake 1"/></div>
-                <div id="causeFlakeTwo" class="snowflakeTwo"><h4>CONTACT</h4><img src="images/snowflake4.png" width="100%" height="100%" alt="cause snowflake 2"/></div>
-                <div id="causeFlakeThree" class="snowflakeThree"><img src="images/snowflake1.png" width="100%" height="100%" alt="cause snowflake 3"/></div>
+                <div id="causeFlakeOne" class="snowflake snowflake--cause snowflakeOne"><h3>CAUSE</h3><img src="images/snowflake5.png" width="100%" height="100%" alt="cause snowflake 1"/></div>
+                <div id="causeFlakeTwo" class="snowflake snowflake--cause snowflakeTwo"><h4>CONTACT</h4><img src="images/snowflake4.png" width="100%" height="100%" alt="cause snowflake 2"/></div>
+                <div id="causeFlakeThree" class="snowflake snowflake--cause snowflakeThree"><img src="images/snowflake1.png" width="100%" height="100%" alt="cause snowflake 3"/></div>
 
 
                 <div class="hiddenContent avoidPointer" id="causeContent">
@@ -295,7 +295,7 @@
                 </div>
 
 
-                <a href="mailto:pkavanaghjr@gmail.com" class="social" id="socialMail"><img src="images/socialMail.png" width="100%" height="100%" alt="Email"/></a>
+                <!-- <a href="mailto:pkavanaghjr@gmail.com" class="social" id="socialMail"><img src="images/socialMail.png" width="100%" height="100%" alt="Email"/></a> -->
 <!--                 <a href="https://twitter.com/?lang=en" class="social" id="socialTweet"><img src="images/socialTwitter.png" width="100%" height="100%" alt="Email"/></a>
                 <a href="https://instagram.com/" class="social" id="socialInsta"><img src="images/socialInsta.png" width="100%" height="100%" alt="Email"/></a>
                 <a href="https://www.youtube.com/" class="social" id="socialYou"><img src="images/socialYoutube.png" width="100%" height="100%" alt="Email"/></a>
@@ -303,7 +303,20 @@
 
                 <section id="copyright">
                         <p id="designby">Design / Development: <a href="http://patkavanaghjr.com/"><span>Pat Kavanagh</span></a></p>
-                        <p id="copyrightText">&copy; SnowTap 2015</p>
+                        <!-- <script>
+                            var today = new Date();
+                            var dd = today.getDate();
+                            var mm = today.getMonth()+1; //January is 0!
+                            var yyyy = today.getFullYear();
+                            if(dd<10) {
+                                dd = '0'+dd
+                            } 
+                            if(mm<10) {
+                                mm = '0'+mm
+                            } 
+                            today = mm + '/' + dd + '/' + yyyy;
+                        </script>
+                        <p id="copyrightText">&copy; SnowTap <span id="copyright-year"><script>document.write(yyyy);</script></span></p> -->
                         <div class="clear"></div> 
                 </section>        
 
