Finish organizing styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>SnowTap</title>
 
     <link href="dist/css/vendor.min.css" rel="stylesheet" type="text/css" />
-    <link href="dist/css/styles_snow.css" rel="stylesheet" type="text/css" />
-    <!-- <link href="dist/css/styles_snow.min.css" rel="stylesheet" type="text/css" /> -->
+    <!-- <link href="dist/css/styles_snow.css" rel="stylesheet" type="text/css" /> -->
+    <link href="dist/css/styles_snow.min.css" rel="stylesheet" type="text/css" />
     <link href="dist/css/hotfix.css" rel="stylesheet" type="text/css" />
 
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
